<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp">

    <TextView
        android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:maxLines="2"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textColor="@color/newsTitleTextColor"
        android:textSize="16sp"
        tools:text="@string/news_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/news_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/defaultTextColor"
            android:textSize="12sp"
            tools:text="@string/section" />

        <TextView
            android:id="@+id/news_published_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/defaultTextColor"
            android:textSize="12sp"
            tools:text="@string/example_date" />

    </LinearLayout>

</LinearLayout>
